--- a/papers/edgesys2023/main.tex
+++ b/papers/edgesys2023/main.tex
@@ -6,11 +6,11 @@
 \title{An Autonomous Resource Management Model towards Cloud Morphing}
 
 \author{Kenjiro Cho}
-\email{kjc@iijlab.net}
+%%\email{kjc@iijlab.net}
 \affiliation{\institution{IIJ Research Laboratory}\city{}\country{}}
 
 \author{Jean-François Baffier}
-\email{jf@baffier.fr}
+%%\email{jf@baffier.fr}
 \affiliation{\institution{IIJ Research Laboratory}\city{}\country{}}
 
 \begin{document}
