--- a/papers/edgesys2023/cloudmorphing.bib
+++ b/papers/edgesys2023/cloudmorphing.bib
@@ -355,12 +355,8 @@
   publisher = {ACM},
   url       = {https://doi.org/10.1145/2670979.2671003},
   doi       = {10.1145/2670979.2671003},
-  booktitle = {ACM Symposium on Cloud Computing},
-  pages     = {1–13},
-  numpages  = {13},
+  booktitle = {SOCC},
   keywords  = {MDP, Resource management, Cloud computing},
-  location  = {Seattle, WA, USA},
-  series    = {SOCC '14}
 }
 
 @article{masanet2020recalibrating,
