--- a/papers/edgesys2023/related.tex
+++ b/papers/edgesys2023/related.tex
@@ -1,16 +1,4 @@
-Congestion pricing and smart data pricing for networking have been
-extensively studied~\cite{Sen-2013}.
-Early work includes congestion pricing by
-Murphy {\em et al.}~\cite{MURPHY19941053},
-and auction-based resource allocation by
-MacKie-Mason {\em et al.}~\cite{pricing-internet-1994}, both in 1994.
-Kelly {\em et al.}~\cite{Kelly-1998} framed congestion pricing in an
-optimization framework for fair allocation, which inspired a large
-number of the following
-work~\cite{Sen-2013,gibbens1999resource,Henderson2001,Briscoe2003-M3I}.
-Congestion pricing are also applied to cloud
-computing~\cite{Wang-hotcloud2010,Song-2014,Kilcioglu-SIGMETRICS2015,Song-INFOCOM2017}.
-Resource allocation for edge computing and micro data centers also has
+Resource allocation for edge computing and micro data centers has
 a rich collection of work; most approaches are based on some form of
 optimization and many employ auction models.
 The topics are ranging from VM auctions in
@@ -18,10 +6,20 @@ IaaS~\cite{Zhang2017-VMauction,Zaman-2013},
 load balancing within a data center~\cite{Rikhtegar2021BiTEAD,Chen-SOCC-2014},
 to
 distributed resource management for microservices~\cite{Suresh-SOA-SOCC2017}.
-Xu {\em et al.}~\cite{Xu2017-zenith} proposed the edge computing
-infrastructure layer similar to ours, separating the cloud
-infrastructure service from the cloud service for micro datacenters,
-but an auction model is proposed for resource allocation.
+
+Congestion pricing and smart data pricing for networking have been
+extensively studied~\cite{Sen-2013}.
+%Early work includes congestion pricing by
+%Murphy {\em et al.}~\cite{MURPHY19941053},
+%and auction-based resource allocation by
+%MacKie-Mason {\em et al.}~\cite{pricing-internet-1994}, both in 1994.
+Kelly {\em et al.}~\cite{Kelly-1998} framed congestion pricing in an
+optimization framework for fair allocation, which inspired a large
+number of the following
+work~\cite{Sen-2013,gibbens1999resource,Henderson2001,Briscoe2003-M3I}.
+Congestion pricing are also applied to cloud
+computing~\cite{Wang-hotcloud2010,Kilcioglu-SIGMETRICS2015,Song-INFOCOM2017}.
+
 Exponential cost growth as a function of load is well known in packet
 switching networks (e.g., M/M/1 queue and CSMA/CD Ethernet).
 The idea to use such cost functions for resource management
@@ -31,11 +29,16 @@ allocation in ATM networks in 1994.
 Their cost function is a barrier function for utility optimization
 and their simple cost minimizing allocation algorithm is also somewhat
 similar to our allocation model.
+
 A system model similar to ours is found in~\cite{Wagner-2012} where
 Wagner {\em et al.} used congestion pricing for resilient job
 allocation in a distributed military cloud.  They used a
 game-theoretic resource allocation method based on Nash Bargaining,
 and developed a Hadoop-based prototype system.
+Also, the separated edge computing infrastructure layer similar to
+ours was proposed in \cite{Xu2017-zenith}, but an auction model is
+used for resource allocation.
+
 We were inspired by the concept of micro cloud services to apply packet
 switching techniques to distributed heterogeneous clouds, and have
 revisited congestion pricing.
