Update figure edge

--- a/papers/edgesys2023/main.tex
+++ b/papers/edgesys2023/main.tex
@@ -1,5 +1,6 @@
 \documentclass[10pt,sigconf,letterpaper,nonacm]{acmart}
 \usepackage{mathtools}
+\usepackage{subcaption}
 
 \graphicspath{{../../figures/edgesys2023/}}
 
