--- a/papers/edgesys2023/simulation.tex
+++ b/papers/edgesys2023/simulation.tex
@@ -12,15 +12,21 @@ A flock of 10 drones start arriving at edge 1.
 The flock moves to edge 2, and then, to edge 3.
 At time 15, another flock of 10 drones arrive.
 
-\begin{figure}[tb]
-  \begin{center}
-    \includegraphics[width=1.0\columnwidth]{figure-edge.pdf}
-    \vspace{-2.0ex}
-    \caption{Flocks of drone --- edge scenario placeholder}
-    \Description{Flocks of drone --- edge scenario placeholder}
-    \label{fig:edge}
-  \end{center}
-\end{figure}
+\begin{figure*}[tb]
+  \centering
+  \subcaptionbox{Baseline allocations\label{subfig:baseline}}{%
+    \includegraphics[width=0.25\paperwidth]{final_edge_1.pdf}
+  }
+  \subcaptionbox{Convex nodes\label{subfig:convex}}{%
+    \includegraphics[width=0.25\paperwidth]{final_edge_2.pdf}
+  }
+  \subcaptionbox{Monotonic nodes\label{subfig:monotonic}}{%
+    \includegraphics[width=0.25\paperwidth]{final_edge_3.pdf}
+  }
+  \caption{Three allocation schemes with drones}
+  \label{fig:edge}
+
+\end{figure*}
 
 The effects of manipulating the cost function and the resource weight
 for a job is illustrated in Figure~\ref{fig:lowering} using the
