--- a/papers/edgesys2023/main.tex
+++ b/papers/edgesys2023/main.tex
@@ -20,9 +20,8 @@
 
     In this paper, we envision future edge clouds with
     abundant heterogeneous computing resources,
-    and propose to apply dynamic pricing to an autonomous model for
-    distributed resource management.
-    In this model, the pseudo cost of a resource is a function of the
+    and propose an autonomous resource management model with dynamic pricing;
+    the pseudo cost of a resource is a function of the
     load, and the required resources for a job are allocated by a simple
     cost minimization algorithm.
     We introduce a convex cost function that enables autonomous
