--- a/papers/edgesys2023/cloudmorphing.bib
+++ b/papers/edgesys2023/cloudmorphing.bib
@@ -520,8 +520,8 @@
 }
 
 @INPROCEEDINGS{Alicherry-INFOCOM2012,
-  author={Alicherry, Mansoor and Lakshman, T.V.},
-  booktitle={IEEE INFOCOM 2012}, 
+  author={Alicherry, M. and Lakshman, T.V.},
+  booktitle={INFOCOM}, 
   title={Network aware resource allocation in distributed clouds}, 
   year={2012},
   volume={},
