--- a/papers/edgesys2023/related.tex
+++ b/papers/edgesys2023/related.tex
@@ -5,7 +5,10 @@ The topics are ranging from VM auctions in
 IaaS~\cite{Zhang2017-VMauction,Zaman-2013},
 load balancing within a data center~\cite{Rikhtegar2021BiTEAD,Chen-SOCC-2014},
 to
-distributed resource management for microservices~\cite{Suresh-SOA-SOCC2017}.
+distributed resource management~\cite{Alicherry-INFOCOM2012} for microservices~\cite{Suresh-SOA-SOCC2017}.
+Xu {\em et al.}~\cite{Xu2017-zenith} proposed an auction model for
+the edge computing infrastructure layer that is similar to
+our system model in separating the infrastructure layer.
 
 Congestion pricing and smart data pricing for networking have been
 extensively studied~\cite{Sen-2013}.
@@ -16,7 +19,7 @@ extensively studied~\cite{Sen-2013}.
 Kelly {\em et al.}~\cite{Kelly-1998} framed congestion pricing in an
 optimization framework for fair allocation, which inspired a large
 number of the following
-work~\cite{Sen-2013,gibbens1999resource,Henderson2001,Briscoe2003-M3I}.
+work~\cite{Sen-2013,gibbens1999resource}.
 Congestion pricing are also applied to cloud
 computing~\cite{Wang-hotcloud2010,Kilcioglu-SIGMETRICS2015,Song-INFOCOM2017}.
 
@@ -35,9 +38,6 @@ Wagner {\em et al.} used congestion pricing for resilient job
 allocation in a distributed military cloud.  They used a
 game-theoretic resource allocation method based on Nash Bargaining,
 and developed a Hadoop-based prototype system.
-Also, the separated edge computing infrastructure layer similar to
-ours was proposed in \cite{Xu2017-zenith}, but an auction model is
-used for resource allocation.
 
 We were inspired by the concept of micro cloud services to apply packet
 switching techniques to distributed heterogeneous clouds, and have
