--- a/papers/edgesys2023/cloudmorphing.bib
+++ b/papers/edgesys2023/cloudmorphing.bib
@@ -131,8 +131,6 @@
   pages     = {611–623},
   numpages  = {13},
   keywords  = {rate limiting, microservices, scheduling, resource management, service-oriented architectures},
-  location  = {Santa Clara, California},
-  series    = {SoCC '17}
 }
 
 @inproceedings{Song-INFOCOM2017,
@@ -299,17 +297,14 @@
   author     = {Sen, S. and Joe-Wong, C. and Ha, S. and Chiang, M.},
   title      = {A Survey of Smart Data Pricing: Past Proposals, Current Plans, and Future Trends},
   year       = {2013},
-  issue_date = {November 2013},
   publisher  = {ACM},
   volume     = {46},
   number     = {2},
   issn       = {0360-0300},
   url        = {https://doi.org/10.1145/2543581.2543582},
   doi        = {10.1145/2543581.2543582},
-  journal    = {ACM Comput. Surv.},
+  journal    = {ACM Comp. Surv.},
   month      = {nov},
-  articleno  = {15},
-  numpages   = {37},
   keywords   = {data plans, economics, Congestion, broadband pricing}
 }
 
@@ -320,8 +315,6 @@
   year      = {2012},
   volume    = {},
   number    = {},
-  pages     = {39-46},
-  publisher = {IEEE},
   doi       = {10.1109/SASOW.2012.16}
 }
 
@@ -437,7 +430,7 @@
   url        = {https://doi.org/10.1145/1496091.1496103},
   doi        = {10.1145/1496091.1496103},
   abstract   = {The data centers used to create cloud services represent a significant investment in capital outlay and ongoing costs. Accordingly, we first examine the costs of cloud service data centers today. The cost breakdown reveals the importance of optimizing work completed per dollar invested. Unfortunately, the resources inside the data centers often operate at low utilization due to resource stranding and fragmentation. To attack this first problem, we propose (1) increasing network agility, and (2) providing appropriate incentives to shape resource consumption. Second, we note that cloud service providers are building out geo-distributed networks of data centers. Geo-diversity lowers latency to users and increases reliability in the presence of an outage taking out an entire site. However, without appropriate design and management, these geo-diverse data center networks can raise the cost of providing service. Moreover, leveraging geo-diversity requires services be designed to benefit from it. To attack this problem, we propose (1) joint optimization of network and data center resources, and (2) new systems and mechanisms for geo-distributing state.},
-  journal    = {SIGCOMM Comput. Commun. Rev.},
+  journal    = {SIGCOMM CCR},
   month      = {dec},
   pages      = {68–73},
   numpages   = {6},
