--- a/papers/edgesys2023/main.tex
+++ b/papers/edgesys2023/main.tex
@@ -11,6 +11,7 @@
 \affiliation{\institution{IIJ Research Laboratory}\city{}\country{}}
 
 \author{Jean-François Baffier}
+%%\email{baffier@iij.ad.jp}
 %%\email{jf@baffier.fr}
 \affiliation{\institution{IIJ Research Laboratory}\city{}\country{}}
 
