--- a/papers/edgesys2023/extensions.tex
+++ b/papers/edgesys2023/extensions.tex
@@ -24,13 +24,12 @@ A path selection mechanism is also needed when assigning a job,
 probably using a source routing mechanism.
 
 There exists a rich area for further research:
-%one topic is {\bf auto-tuning of the cost functions}.
-%It may not be straightforward to obtain expected results by tuning the
-%convex cost function due to the interactions between load-balancing
-%and idle-resource pooling.
-%It would be interesting to apply reinforcement learning to cost
-%tuning.
-one topic is {\bf hierarchical configurations}.
+one topic is {\em a deeper study on cost functions}
+to understand interactions among different cost functions
+with load-balancing and idle-resource pooling,
+and how to better control the overall system behavior.
+
+Another topic is {\em hierarchical configurations}.
 A hierarchical system model would be preferred for scalability
 and for management purposes.
 For example, a distributed datacenter model can consist of
@@ -39,18 +38,18 @@ with rack-level resources.
 %The proposed system was originally designed mainly for a single
 %administrative domain.
 The hierarchical model naturally extends to
-an {\bf inter-cloud model} in which different cloud systems are
+an {\em inter-cloud model} in which different cloud systems are
 federated.
 The mechanism of the idle-resource pooling allows utilizing external
 clouds only when needed.
 
-Further, it would be possible to {\bf crowdsource the resource supply}
+Further, it would be possible to {\em crowdsource the resource supply}
 at the edge. 
 Then, we need a monetary charging, authentication and authorization
 mechanisms to add externally provided resources to the resource pool.
 
 The location of data is critical for the pseudo cost so that
-{\bf data placement} would play an important role for cloud morphing. 
+{\em data placement} would play an important role for cloud morphing. 
 A possible approach is to migrate data at a coarser timescale, based
 on usage history.
 Another possibility is to design a new distributed storage system
@@ -58,7 +57,7 @@ suitable for the cloud morphing model in which (cached) data can be
 easily moved.
 
 The idle-resource pooling is not used for network links in this paper, but
-it is possible to use it for dynamically making {\bf Layer 2 paths}
+it is possible to use it for dynamically establishing {\em Layer 2 paths}
 (e.g., lightpath switching over WDM networks).
 
 We believe that future distributed heterogeneous clouds need a new
