--- a/papers/edgesys2023/related.tex
+++ b/papers/edgesys2023/related.tex
@@ -19,14 +19,14 @@ extensively studied~\cite{Sen-2013}.
 Kelly {\em et al.}~\cite{Kelly-1998} framed congestion pricing in an
 optimization framework for fair allocation, which inspired a large
 number of the following
-work~\cite{Sen-2013,gibbens1999resource}.
+work~\cite{Sen-2013,gibbens1999resource,Briscoe2003-M3I}.
 Congestion pricing are also applied to cloud
-computing~\cite{Wang-hotcloud2010,Kilcioglu-SIGMETRICS2015,Song-INFOCOM2017}.
+computing~\cite{Kilcioglu-SIGMETRICS2015,Song-INFOCOM2017}.
 
 Exponential cost growth as a function of load is well known in packet
 switching networks (e.g., M/M/1 queue and CSMA/CD Ethernet).
 The idea to use such cost functions for resource management
-was in \cite{MURPHY19941053} where
+was in \cite{Murphy94distributedpricing} where
 Murphy {\em et al.} used a cost function for distributed bandwidth
 allocation in ATM networks in 1994.
 Their cost function is a barrier function for utility optimization
