--- a/papers/edgesys2023/simulation.tex
+++ b/papers/edgesys2023/simulation.tex
@@ -1,36 +1,61 @@
 
 We have developed a simple simulation tool to evaluate the model
-that is publicly available from (URL removed for blind-review).
+that is publicly available\footnote{https://github.com/xxx/}.
 We omit the details of the simulation settings in this paper but all
 the settings are described in the simulation tool.
 
-\subsection{Basic Behaviors}
+%%\subsection{Basic Behaviors}
 
-Figure\ref{fig:edge} shows a simple scenario in which
-flocks of drones move over 3 edge nodes.
-A flock of 10 drones start arriving at edge 1.
-The flock moves to edge 2, and then, to edge 3.
-At time 15, another flock of 10 drones arrive.
+The first scenario compares the behaviors of baseline, monotonic and
+convex functions with a simple scenario: a flock of drones move
+over 3 edge nodes in Figure~\ref{fig:edge}.
+A flock of 10 drones start at edge 1, move to edge 2 during time
+$(t1, t2)$, and then, to edge 3 $(t2, t3)$, and back to edge 1 $(t3, t4)$.
+The CPU capacity of edge 3 is only $.5$ of edge 1 and 2.
+The baseline assigns drones to the nearest available edge (an extreme
+case of the monotonic with $f(\rho) = 0$ for $\rho$ in $[0,1)$ and
+$f(\rho) = \infty$ for $\rho = 1$).
+The monotonic case tries to use a less loaded edge. As a result,
+the assignment tends to fluctuate more with minor noise.
+While the convex case tries to stabilize the load of the edges.
 
-\begin{figure*}[tb]
-  \centering
-  \subcaptionbox{Baseline allocations\label{subfig:baseline}}{%
-    \includegraphics[width=0.25\paperwidth]{final_edge_1.pdf}
-  }
-  \subcaptionbox{Convex nodes\label{subfig:convex}}{%
-    \includegraphics[width=0.25\paperwidth]{final_edge_2.pdf}
-  }
-  \subcaptionbox{Monotonic nodes\label{subfig:monotonic}}{%
-    \includegraphics[width=0.25\paperwidth]{final_edge_3.pdf}
-  }
-  \caption{Three allocation schemes with drones}
-  \label{fig:edge}
+(more explanations, more explanations, more explanations, more
+explanations, more explanations, more explanations, more explanations,
+explanations, more explanations, more explanations, more explanations,
+explanations, more explanations, more explanations, more explanations,
+more explanations.)
 
-\end{figure*}
+\begin{figure}[tb]
+  \begin{center}
+    \includegraphics[width=1.0\columnwidth]{final_edge_2.pdf}
+    \vspace{-4.0ex}
+    \caption{Comparing (a) baseline, (b) convex and (c) monotomic behaviros with
+      a flock of drone scenario}
+    \smallskip
+    \raggedright
+    \small
+    \Description{Simulation results to illustrate the effects of cost manipulations.}
+    \label{fig:edge}
+  \end{center}
+\end{figure}
+%\begin{figure*}[tb]
+%  \centering
+%  \subcaptionbox{Baseline allocations\label{subfig:baseline}}{%
+%    \includegraphics[width=0.25\paperwidth]{final_edge_1.pdf}
+%  }
+%  \subcaptionbox{Convex nodes\label{subfig:convex}}{%
+%    \includegraphics[width=0.25\paperwidth]{final_edge_2.pdf}
+%  }
+%  \subcaptionbox{Monotonic nodes\label{subfig:monotonic}}{%
+%    \includegraphics[width=0.25\paperwidth]{final_edge_3.pdf}
+%  }
+%  \caption{Three allocation schemes with drones}
+%  \label{fig:edge}
+%\end{figure*}
 
 The effects of manipulating the cost function and the resource weight
-for a job is illustrated in Figure~\ref{fig:lowering} using the
-topology in Figure~\ref{fig:system}.
+for a job is illustrated in the second scenario in
+Figure~\ref{fig:lowering} using the topology in Figure~\ref{fig:system}.
 The capacities of MDC and DC are set to 100 and 1,000 respectively.
 Note that the capacity of DCs is 10 times larger than that of MDCs
 so that DC's load in the top plot looks much smaller for the same
@@ -57,7 +82,7 @@ increased, and all jobs are assigned to the node that has the object
 \begin{figure}[tb]
   \begin{center}
     \includegraphics[width=1.0\columnwidth]{figure6-costs_manipulation.pdf}
-    \vspace{-2.0ex}
+    \vspace{-4.0ex}
     \caption{Cost manipulations: shifting the load +.2,
       +.4 and raising the weight for data access}
     \smallskip
@@ -68,7 +93,7 @@ increased, and all jobs are assigned to the node that has the object
   \end{center}
 \end{figure}
 
-\subsection{Mixed Behaviors}
+%%\subsection{Mixed Behaviors}
 
 A more complex scenario is shown in Figure~\ref{fig:mixed}.
 Again, the topology in Figure~\ref{fig:system} is used, and
@@ -94,7 +119,7 @@ and how jobs for MDCs can be offloaded to upstream DCs.
 \begin{figure}[tb]
   \begin{center}
     \includegraphics[width=1.0\columnwidth]{figure7-mixed_load_4nodes.pdf}
-    \vspace{-2.0ex}
+    \vspace{-4.0ex}
     \caption{Mixed load with 2 DCs and 2 MDCs}
     \Description{Simulation results with mixed scenario.}
     \label{fig:mixed}
@@ -149,7 +174,7 @@ and how jobs for MDCs can be offloaded to upstream DCs.
 % active, except a short transient overshoot during the surge from time
 % 680.
 
-Overall, the simulation results illustrate the basic behaviors of the
+Overall, the simulation results illustrate the behaviors of the
 idle-resource pooling,
 quick responses to changing
 load by offloading excess jobs to upstream DCs,
