--- a/papers/edgesys2023/cloudmorphing.bib
+++ b/papers/edgesys2023/cloudmorphing.bib
@@ -442,7 +442,7 @@
   title     = {Microservice architecture: aligning principles, practices, and culture},
   author    = {Nadareishvili, I. and Mitra, R. and McLarty, M. and Amundsen, M.},
   year      = {2016},
-  publisher = {" O'Reilly Media, Inc."}
+  publisher = {{O'Reilly Media, Inc.}}
 }
 
 @inproceedings{aazam2015dynamic,
