--- a/papers/edgesys2023/extensions.tex
+++ b/papers/edgesys2023/extensions.tex
@@ -11,7 +11,11 @@ For the model refinement,
 the current model is simplistic so that we will add bidirectional
 communication costs,
 multiple users per job, interactions among jobs, and other features.
-We did not consider dependency among microservice jobs, but it would be
+We need deeper studies on cost functions
+to understand interactions among different cost functions
+with load-balancing and idle-resource pooling,
+and how to better control the overall system behavior.
+Also, we did not consider dependency among microservice jobs, but it would be
 necessary to investigate the impact of the interplay of microservice
 jobs ~\cite{Suresh-SOA-SOCC2017}.
 
@@ -24,12 +28,7 @@ A path selection mechanism is also needed when assigning a job,
 probably using a source routing mechanism.
 
 There exists a rich area for further research:
-one topic is {\em a deeper study on cost functions}
-to understand interactions among different cost functions
-with load-balancing and idle-resource pooling,
-and how to better control the overall system behavior.
-
-Another topic is {\em hierarchical configurations}.
+one topic is {\em hierarchical configurations}.
 A hierarchical system model would be preferred for scalability
 and for management purposes.
 For example, a distributed datacenter model can consist of
@@ -40,8 +39,8 @@ with rack-level resources.
 The hierarchical model naturally extends to
 an {\em inter-cloud model} in which different cloud systems are
 federated.
-The mechanism of the idle-resource pooling allows utilizing external
-clouds only when needed.
+The advantage is that the idle-resource pooling mechanism allows
+utilizing external clouds only when needed.
 
 Further, it would be possible to {\em crowdsource the resource supply}
 at the edge. 
@@ -57,7 +56,7 @@ suitable for the cloud morphing model in which (cached) data can be
 easily moved.
 
 The idle-resource pooling is not used for network links in this paper, but
-it is possible to use it for dynamically establishing {\em Layer 2 paths}
+it is possible to use it for dynamically establishing {\em Layer-2 paths}
 (e.g., lightpath switching over WDM networks).
 
 We believe that future distributed heterogeneous clouds need a new
