--- a/papers/edgesys2023/intro.tex
+++ b/papers/edgesys2023/intro.tex
@@ -15,8 +15,8 @@ by means of utilizing various available computing resources.
 For example, we might be able to exploit idle computing resources at
 home for a cloud, similar to the way in-house solar power systems are
 connected to an electrical grid.
-Once there are enough edge resources, they do not need to be
-micromanaged and can be used for general purposes.
+Once there are enough edge resources, they can be used for general
+purposes and do not need tight resource management.
 
 %% microservice is a driving factor
 A driving factor for exploiting smaller computing resources
