make it fit into 6 pages

--- a/papers/edgesys2023/intro.tex
+++ b/papers/edgesys2023/intro.tex
@@ -16,7 +16,7 @@ For example, we might be able to exploit idle computing resources at
 home for a cloud, similar to the way in-house solar power systems are
 connected to an electrical grid.
 Once there are enough edge resources, they can be used for general
-purposes and do not need tight resource management.
+purposes and do not need tight management.
 
 %% microservice is a driving factor
 A driving factor for exploiting smaller computing resources
